Fix up center alignment

--- a/Ashish_P/perview/src/styles/stylesheets/header.scss
+++ b/Ashish_P/perview/src/styles/stylesheets/header.scss
@@ -4,17 +4,23 @@ $headernavwidth: 195px;
 
 .header__ {
   &container {
-    // height: 60px;
-    width: 100%;
-    position: fixed;
-    background: white;
-    z-index: 10;
-    // display: flex;
-    // justify-content: space-between;
-    // align-items: center;
+      // height: 60px;
+      width: 100%;
+      position: fixed;
+      background: white;
+      // bring to top
+      z-index: 10;
+
+    .container .navbar-header{
+      // width: 100%;
+      display: flex;
+      align-items: center;
+      // justify-content: space-between;
+      vertical-align: middle;
+    }
 
     /* scrolling shadow */
-    &, .scrolled {
+    .scrolled {
       -webkit-box-shadow: 0px 3px 5px rgba(100, 100, 100, 0.49);
       -moz-box-shadow:    0px 3px 5px rgba(100, 100, 100, 0.49);
       box-shadow:         0px 3px 5px rgba(100, 100, 100, 0.49);
@@ -22,28 +28,11 @@ $headernavwidth: 195px;
     }
   }
 
-
   &box {
     height: 60px;
     align-items: center;
     justify-content: space-around;
     margin: auto;
-  }
-// nav for authenicated user
-  &authnav {
-    // width: $maxwidth - $logowidth;
-    display: flex;
-    // flex-direction: row;
-    // justify-content: flex-end;
-    align-items: center;
-  }
-
-  &authnav-box {
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
   }
 
   /* logo */
@@ -51,12 +40,13 @@ $headernavwidth: 195px;
     width: $logowidth;
     margin-right: 8px;
     transform: translateY(-3px);
-    -webkit-backface-visibility: hidden;
-    backface-visibility: hidden;
-    image-rendering: -moz-crisp-edges;         /* Firefox */
-    image-rendering:   -o-crisp-edges;         /* Opera */
-    image-rendering: -webkit-optimize-contrast;/* Webkit (non-standard naming) */
-    image-rendering: crisp-edges;
+    margin-right: auto;
+    // -webkit-backface-visibility: hidden;
+    // backface-visibility: hidden;
+    // image-rendering: -moz-crisp-edges;         /* Firefox */
+    // image-rendering:   -o-crisp-edges;         /* Opera */
+    // image-rendering: -webkit-optimize-contrast;/* Webkit (non-standard naming) */
+    // image-rendering: crisp-edges;
   }
 
   &logoimg {
@@ -67,6 +57,26 @@ $headernavwidth: 195px;
     image-rendering:   -o-crisp-edges;         /* Opera */
     image-rendering: -webkit-optimize-contrast;/* Webkit (non-standard naming) */
     image-rendering: crisp-edges;
+  }
+
+// nav for authenicated user
+  &authnav {
+    list-style: none;
+    // margin-right: 0;
+    // width: $maxwidth - $logowidth;
+    // display: flex;
+    // flex-direction: row;
+    // justify-content: flex-end;
+    // align-items: center;
+    // margin-left: auto;
+  }
+
+  &authnav-box {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
   }
 
   //Nav Menu
